--- a/counter-App/index.html
+++ b/counter-App/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Counter App</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>New Year Eve</h1>
     <!-- <h2>Number of days left in this year</h2> -->
     <div class="countdown-container">
-        <div class="counter-el days-c" >
-            <p class="big-text" id="days">0</p>
-         <span>days</span>
-        </div>
-        <div class="counter-el hours-c" >
-            <p class="big-text" id="hours">0</p>
-         <span>hours</span>
-        </div>
-        <div class="counter-el minutes" >
-            <p class="big-text" id="minutes">0</p>
-         <span>minutes</span>
-        </div>
-        <div class="counter-el seconds-c" >
-            <p class="big-text" id="seconds">0</p>
-         <span>seconds</span>
-        </div>
+      <div class="counter-el days-c">
+        <p class="big-text" id="days">0</p>
+        <span>days</span>
+      </div>
+      <div class="counter-el hours-c">
+        <p class="big-text" id="hours">0</p>
+        <span>hours</span>
+      </div>
+      <div class="counter-el minutes">
+        <p class="big-text" id="minutes">0</p>
+        <span>minutes</span>
+      </div>
+      <div class="counter-el seconds-c">
+        <p class="big-text" id="seconds">0</p>
+        <span>seconds</span>
+      </div>
     </div>
     <!-- <h2>Number of days completed in this year</h2>
     <div class="countdown-container">
@@ -47,5 +47,5 @@
         </div>
     </div> -->
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
